--- a/RockyShop/appsettings.Development.json
+++ b/RockyShop/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionString": {
+    "RockyShop": "Host=localhost;Port=5432;Database=RockyShop;Username=postgres;Password=postgres"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
