--- a/RockyShop/RockyShop.csproj
+++ b/RockyShop/RockyShop.csproj
@@ -14,6 +14,7 @@
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.0" />
+      <PackageReference Include="RazorGenerator.Mvc" Version="2.4.9" />
     </ItemGroup>
 
 
@@ -21,6 +22,18 @@
       <Content Update="appsettings.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </Content>
+
+
+
+
+
+
     </ItemGroup>
+
+
+
+
+
+
 
 </Project>
